Project

General

Profile

Actions

Bug #64827

open

osd/scrub: "reservation requested while still reserved" error in cluster log

Added by Ronen Friedman about 2 months ago. Updated 25 days ago.

Status:
Pending Backport
Priority:
Normal
Category:
OSD
Target version:
-
% Done:

0%

Source:
Tags:
backport_processed
Backport:
squid
Regression:
No
Severity:
2 - major
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

The scenario encountered:
- the replica is reserved, and is now in ReplicaReserved
- the primary starts scrubbing a chunk. The Replica follows into ReplicaActive/ReplicaActiveOp/ReplicaBuildingMap
- no-scrub is set, and the Primary aborts, and sends a Release
- the release is ignored in ReplicaActiveOp

https://pulpito.ceph.com/yuriw-2024-03-08_16:20:46-rados-wip-yuri4-testing-2024-03-05-0854-distro-default-smithi/7587295/


Related issues 1 (1 open0 closed)

Copied to Ceph - Backport #65391: squid: osd/scrub: "reservation requested while still reserved" error in cluster logIn ProgressRonen FriedmanActions
Actions #1

Updated by Ronen Friedman about 2 months ago

  • Description updated (diff)
Actions #2

Updated by Ronen Friedman about 2 months ago

  • Status changed from New to In Progress
Actions #3

Updated by Ronen Friedman about 2 months ago

Testing a fix as https://github.com/ceph/ceph/pull/56132 (now in draft status)

Actions #4

Updated by Ronen Friedman about 2 months ago

  • Status changed from In Progress to Fix Under Review
  • Pull request ID set to 56132
Actions #5

Updated by Nitzan Mordechai about 1 month ago

/a/yuriw-2024-03-15_13:54:42-rados-wip-yuri7-testing-2024-03-14-0836-distro-default-smithi/7602526
/a/yuriw-2024-03-15_13:54:42-rados-wip-yuri7-testing-2024-03-14-0836-distro-default-smithi/7602530
/a/yuriw-2024-03-15_13:54:42-rados-wip-yuri7-testing-2024-03-14-0836-distro-default-smithi/7602542
/a/yuriw-2024-03-15_13:54:42-rados-wip-yuri7-testing-2024-03-14-0836-distro-default-smithi/7602570
/a/yuriw-2024-03-15_13:54:42-rados-wip-yuri7-testing-2024-03-14-0836-distro-default-smithi/7602592
/a/yuriw-2024-03-15_13:54:42-rados-wip-yuri7-testing-2024-03-14-0836-distro-default-smithi/7602600

Actions #6

Updated by Ronen Friedman about 1 month ago

A simpler solution was implemented as https://github.com/ceph/ceph/pull/56459, replacing 56132.

Actions #7

Updated by Ronen Friedman 25 days ago

  • Status changed from Fix Under Review to Pending Backport
  • Backport set to squid
  • Pull request ID changed from 56132 to 56459
Actions #8

Updated by Backport Bot 25 days ago

  • Copied to Backport #65391: squid: osd/scrub: "reservation requested while still reserved" error in cluster log added
Actions #9

Updated by Backport Bot 25 days ago

  • Tags set to backport_processed
Actions

Also available in: Atom PDF