osd/scrub: handle 'release' events sent during 'scrub abort'

Scenario:
- the replica is reserved;
- the Primary initiates a chunk operation;
- the replica is in ReplicaActive/ReplicaActiveOp/ReplicaBuildingMap
- 'no-scrub' is set, and the Primary sends a 'release' event to the
  replica.

Desired behavior:
- the replica aborts the chunk operation and transitions to
  ReplicaReserved;
- the 'release' event is delivered in the new state.

Fixes: https://tracker.ceph.com/issues/64827
Signed-off-by: Ronen Friedman <rfriedma@redhat.com>
(cherry picked from commit 0f0c3936689483b09c350f833087f06f00b19449)